change grid to flex to fix gap showing in mobile grid layout ios

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,15 +3,15 @@
 .main-page {
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-rows: 40px 1fr;
-  gap: 0;
+  display: flex;
+  flex-direction: column;
 }
 .main-page .tab-container {
   grid-row: 1;
+  flex-basis: 40px;
 }
 .main-page-content {
-  grid-row: 2;
+  flex-grow: 1;
   background-color: var(--colour-white);
 }
 
